[tool.poetry]
name = "architecture-patterns-with-python"
version = "0.1.0"
description = ""
authors = ["Carlos Escobedo <cdescobedo@proton.me>"]
readme = "README.md"
packages = [{include = "architecture_patterns_with_python"}]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
